# RAMMP-Kinova

./: .gitattributes  .gitignore  CLAUDE.md  README.md  requirements.txt
docs/: PLACE_USER_GUIDE_HERE.md  architecture.md  benchmark-memo.md  grasp-proposer-memo.md  implementation-plan.md  input-devices-survey.md  operational-stack.md  research-adoption-memo.md
ros2_ws/src/adl_primitives/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/adl_primitives/adl_primitives/: estop.py  hello_arm.py  jog_ui.py  kinova_primitives.py  test_arm.py
ros2_ws/src/adl_primitives/config/: hello_arm.yaml  jog_ui.yaml  test_arm.yaml
ros2_ws/src/adl_primitives/include/adl_primitives/: kinova_primitives.hpp
ros2_ws/src/adl_primitives/launch/: hello_arm.launch.py  jog_ui.launch.py  test_arm.launch.py
ros2_ws/src/adl_primitives/src/: hello_arm_node.cpp  kinova_primitives.cpp
ros2_ws/src/curobo_planner/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/curobo_planner/config/: scene.yaml
ros2_ws/src/curobo_planner/curobo_planner/: brain.py  nl_command.py  planner_node.py  scene.py
ros2_ws/src/curobo_planner/launch/: curobo_demo.launch.py
ros2_ws/src/curobo_planner/voice/: computer.py  computuh.html  computuh.py
ros2_ws/src/mujoco_sim/: README.md  package.xml  scene_gen3.xml  setup.py
ros2_ws/src/mujoco_sim/config/: controllers.yaml
ros2_ws/src/mujoco_sim/launch/: mujoco_bringup.launch.py
ros2_ws/src/mujoco_sim/mujoco_sim/: build_scene.py  check_traj.py  mirror_viewer.py  scenery.py
ros2_ws/src/mujoco_sim/urdf/: mujoco_control.urdf.xacro
ros2_ws/src/rammp_perception/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/rammp_perception/rammp_perception/: backends.py  detector_node.py  geometry.py  grasp_proposer.py  probe.py
scripts/: setup_ros2_kortex.sh
tools/: ik_check.py  install_graspgen.zsh  launch_stack.zsh  perception_test.py  voice_gate_test.py
