<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adl_primitives</name>
  <version>0.0.1</version>
  <description>
    Basic Kinova Gen3 motion primitives (Milestone 1) for the RAMMP ADL project:
    a parameterized C++ node that commands a slow joint trajectory and the gripper
    via ros2_kortex, with a software e-stop service.
  </description>
  <maintainer email="chrisman4247@gmail.com">Chris Cox</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>controller_manager_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
